--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1812,8 +1812,8 @@
 /* Box */
 
 	.box {
-		background: rgba(0, 0, 0, 0.5);
-		border-radius: 4px;
+		background: rgba(0, 0, 0, 0.7);
+		border-radius: 10px;
 		margin-bottom: 2em;
 		overflow: hidden;
 		padding: 4em;
@@ -1826,7 +1826,7 @@
 		}
 
 		.box header h2 {
-			margin: 0 0 .5em 0;
+			margin: 0.5em 0 .5em 0;
 			color: #FFF;
 		}
 
@@ -1851,7 +1851,7 @@
 		@media screen and (max-width: 736px) {
 
 			.box {
-				padding: 2em;
+				padding: 3em 2em 2em 2em;
 			}
 
 		}
@@ -1859,7 +1859,7 @@
 		@media screen and (max-width: 480px) {
 
 			.box {
-				padding: 1em;
+				padding: 3em 1em 1em 1em;
 			}
 
 		}
